--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -272,6 +272,13 @@
     right: 36px;
     z-index: 11;
     bottom: -20px;
+    @media (min-width: 991px) {
+      width: 730px;
+      position: absolute;
+      right: 36px;
+      z-index: 11;
+      bottom: -80px;
+    }
   }
   @media (max-width: 767.98px) {
     .dr-image {
